--- a/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.css
+++ b/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.css
@@ -26,14 +26,18 @@
 
 .town {
     font-family: 'Patua One', sans-serif;
-    font-size: 30px;
-    margin: 5px 20px 20px 20px;
-    color: white;
+    font-size: 18px;
+    /* margin: 5px 20px 20px 20px; */
 }
 
 .shortDesc{
     font-family: 'Rasa', serif;
     font-size: 25px;
+}
+
+.longDesc{
+    font-family: 'Rasa', serif;
+    font-size: 20px;
 }
 
 .box {
