--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -18,7 +18,7 @@
                     <o-textarea-input attr="short_desc" label="DESCRIPTION"
                         placeholder="{{ 'ONESENTENCE' | oTranslate }}" fxFlex="80" max-length="250"></o-textarea-input>
                 </o-column>
-                <o-column title="ACTIVITIES" layout-align="start stretch" fxFlex="80" icon="pool">
+                <o-column title="ACTIVITIES" layout-align="start stretch" fxFlex="80" icon="favorite">
 
                     <mat-chip-list fxFlex="80">
                         <mat-chip class="activitiesChip" *ngFor="let activity of arrayActivitiesClient"
