--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -32,7 +32,7 @@
                             entity="activity" keys="id_activity" columns="activity_name;id_activity" orderable="true"
                             show-page-size="no" quick-filter="false" cols="6" sortable-columns="activity_name"
                             gutter-size="5px" detail-mode="none" (onDataLoaded)="onLoad()" pagination-controls="false"
-                            controls="false" grid-item-height="60">
+                            controls="false" grid-item-height="60" show-footer="no" >
 
                             <o-grid-item *ngFor="let item of activitiesB.dataArray" show-page-size="false">
 
