--- a/Front/src/app/main/community/community-home/community-home.component.css
+++ b/Front/src/app/main/community/community-home/community-home.component.css
@@ -3,6 +3,15 @@ o-grid {
     align-items: start;
 }
 
+/* .o-grid {
+    .o-grid-toolbar {
+      .o-button {
+        margin-right: 12px;
+      }
+  
+    } 
+  } */
+
 .community-title {
     margin-top: 10px;
     text-align: center;
@@ -21,8 +30,8 @@ o-grid {
     background-color: #f4f4f4; 
     border: 1px solid #ccc; 
     border-radius: 10px;
-    padding-right: 25px;
-    padding-left: 25px;
+    padding-right: 30px;
+    padding-left: 30px;
 }
 
 .buttons-container {
@@ -44,15 +53,23 @@ o-grid {
 /* Estilos del grid */
 .grid-container {
     display: grid;
-    box-shadow: 0px 0px 30px #393e46;
     cursor: pointer;
-    background-color: #ffffffd4;
     border-radius: 20px;
     width: 100%;
     height: auto;
     display: grid;
     position: relative;
     }
+
+.grid-container::after {
+    content:'';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(50,50,50,50);
+}
 
 
 .communityCard {
@@ -63,25 +80,30 @@ o-grid {
     position: relative;
 }
 
-.community-image {
-    object-fit: cover; /* Ajuste de imagen */
-    width: 100%; 
-    height: 100%; 
-    max-width: 100%; 
-    max-height: 100%; 
+.community-image::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(50, 50, 50, 50); /* Fondo negro semitransparente */
     border-radius: 20px;
 }
 
-
 .community-image {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+    object-fit: cover; /* Ajuste de imagen */
+    width: 100%; 
+    height: auto; 
+    max-width: 100%; 
+    max-height: 100%; 
+    border-radius: 20px;
+    align-items: center;
 }
 
 .community-name {
     font-weight: bold;
-    font-size: 2em;
+    font-size: 1.7em;
     text-transform: uppercase;
     color: white;
     position: absolute;
