--- a/Front/src/app/main/towns/towns-home/towns-home.component.css
+++ b/Front/src/app/main/towns/towns-home/towns-home.component.css
@@ -1,41 +1,77 @@
 o-grid {
-    row-gap: 10px;
+    margin-top: 30px;
 }
 
-.townCard:hover {
-    border: 5px solid transparent;
-    display: grid;
-    place-items: center;
-    
+/* Estilos para el filtro */
+.filter-style {
+  background-color: #f4f4f4; 
+  border: 1px solid #ccc; 
+  border-radius: 10px;
+  padding-right: 30px;
+  padding-left: 30px;
 }
 
-.town-image::after { /* Velo sobre foto */
-    content: ""; /* Para que se muestre se muestre */
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(255, 255, 255, 0.10); /* Opacidad blanco */
-    /* background-color: rgba(50, 50, 50, 0.10); /* Opacidad negro todo el cuadro */
-    pointer-events: none;
+.buttons-container {
+  display: flex;
+  justify-content: space-between; /* Espacio entre los elementos */
+  align-items: center;
 }
 
-.town-image {
-    width: 100%; 
-    max-height: 220px; 
+.input-search {
+  margin-right: 10px; 
+}
+
+.input-clear {
+  background-color: transparent;
+  border: none;
+  cursor: pointer; 
+}
+
+
+  .o-grid-item {
+    border-radius: 10px;
+    cursor: pointer;
+    margin: 10px;
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .townCard:hover {
+    transform: scale(1.05);
+  }
+  
+  .image-container {
+    width: 100%;
+    height: 220px;
+    overflow: hidden;
+  }
+  
+  .town-image {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
   }
   
-.town-name {
-    font-weight: bold;
-    font-size: 1em;
-    text-transform: uppercase;
+  .town-details {
     text-align: center;
+    padding: 10px;
   }
   
-.province-name {
+  .town-name {
+    font-weight: bold;
+    font-size: 1em;
+    overflow: hidden;
+    padding: 4px 0;
+    text-overflow: ellipsis;
+    /* Permitir que el texto ocupe hasta dos líneas */
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    max-height: 2.6em;
+  }
+  
+  .province-name {
     font-size: 0.8em;
-    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
