--- a/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.html
@@ -1,6 +1,8 @@
 <!--     ////   WIP composición gráfica  ////     -->
 <button mat-flat-button [routerLink]="['../../towns', idtown]">
-  < {{'BACKBTN' | oTranslate}}</button>
+  <mat-icon>arrow_back_ios_new</mat-icon>
+  {{'BACKBTN' | oTranslate}}
+</button>
     <div class="container">
       <div class="title">
         <p class="hostName">{{nameInput.getValue()}} {{surnameInput.getValue()}}</p>
