--- a/Front/src/app/main/towns/towns-detail/towns-detail.component.html
+++ b/Front/src/app/main/towns/towns-detail/towns-detail.component.html
@@ -1,4 +1,7 @@
-<button mat-flat-button [routerLink]="['../../communities', idcommunity]"> < {{'BACKBTN' | oTranslate}}</button>
+<button mat-flat-button [routerLink]="['../../communities', idcommunity]">
+    <mat-icon>arrow_back_ios_new</mat-icon>
+  {{'BACKBTN' | oTranslate}}
+</button>
 <o-form #form fxFill service="towns" entity="town" keys="id_town" show-header="no" (onDataLoaded)="onLoad()">
     <o-text-input attr="id_town" sql-type="INTEGER" enabled="no" oHidden></o-text-input>
     <o-text-input attr="id_community" sql-type="INTEGER" enabled="no" oHidden></o-text-input>
