--- a/Front/src/app/register/register/register.component.html
+++ b/Front/src/app/register/register/register.component.html
@@ -9,7 +9,7 @@
     <div class="box2">
       <o-form #formregister [formGroup]="form" service="register" query-on-init="no" entity="register" keys="user_"
         ignore-on-exit="passwordConfirm" show-header="no" confirm-exit="no" (onInsert)="userCreated()">
-        <o-button [routerLink]="['/login']" type="RAISED" label="BACKBTN" layout-padding color="accent" icon="arrow_back"></o-button>
+        <o-button [routerLink]="['/login']" type="RAISED" label="BACKBTN" layout-padding color="accent" icon="arrow_back_ios_new"></o-button>
         <o-text-input attr="name" label="NAME" fxFlex="100" required="yes" max-length="20"></o-text-input>
         <o-text-input attr="surname" label="SURNAME" fxFlex="100" required="yes" max-length="30"></o-text-input>
         <o-email-input attr="user_" label="{{ 'Register email' | oTranslate }}" placeholder="example@example.com"
