--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -116,7 +116,7 @@
                     columns="id_reservation;name_traveler;surname_traveler;name_host;surname_host;message;status_name;reservation_date"
                     query-rows="8" refresh-button="no" quick-filter="true"
                     visible-columns="name_host;message;status_name;reservation_date" [cols]="1" grid-item-height="70px"
-                    gutter-size="1px">
+                    gutter-size="1px" show-footer="no">
                 
                     <o-grid-item *ngFor="let list of gridReservationReceived.dataArray">
 
@@ -155,7 +155,7 @@
                     columns="id_reservation;name_traveler;surname_traveler;name_host;surname_host;message;status_name;reservation_date"
                     query-rows="8" refresh-button="no" quick-filter="true"
                     visible-columns="name_host;message;status_name;reservation_date" [cols]="1" grid-item-height="70px"
-                    gutter-size="1px">
+                    gutter-size="1px" show-footer="no">
                     <o-grid-item *ngFor="let list of gridReservationSent.dataArray">
 
                         <o-column layout-padding fxFlex="50" class="name-msg">
