--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-detail/travelers-reservation-detail.component.css
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-detail/travelers-reservation-detail.component.css
@@ -1,8 +1,127 @@
 .container {
     width: 500px;
     height: 550px;
-    background: url(../../../../../assets/images/dialog1.png);
+    background: url(../../../../../assets/images/dialogRec.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+
+}
+
+.boxes {
+    display: flex;
+    flex-direction: column;
+    width: 440px;
+    margin: 20px;
+   
+
+
+}
+
+.date1 {
+    text-align: right;
+    font-size: small;
+    color: rgb(45, 13, 120);
+    margin: 20px 30px 0 0;
+
+
+}
+
+.date2 {
+    text-align: right;
+    font-size: large;
+    font-weight: bold;
+    color: rgb(45, 13, 120);
+    margin: 0 30px 10px 0;
+
+}
+
+.box1 {
+    width: 400px;
+    height: auto;
+    padding: 15px;
+    background-color: white;
+    border-radius: 10px;
+    border: 3px solid rgb(223, 221, 245);
+    margin-bottom: 15px;
+  
+}
+
+.nameT {
+
+    text-transform: uppercase;
+    font-weight: bold;
+    color: rgb(45, 13, 120);
+}
+
+.msgT {
+    font-size: small;
+    color: rgb(45, 13, 120);
+
+
+}
+
+.box2 {
+    width: 400px;
+    height: auto;
+    padding: 15px;
+    background-color: white;
+    border-radius: 10px;
+    border: 3px solid rgb(223, 221, 245);
+
+  
+}
+
+.nameH {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: rgb(45, 13, 120);
+    text-align: right;
+}
+
+.msgH {
+    font-size: small;
+    color: rgb(45, 13, 120);
+    text-align: right;
+
+}
+
+
+o-textarea-input {
+    margin-top: 50px;
+
+}
+
+.acc-rej {
+    font-size: small;
+    color: rgb(45, 13, 120);
+}
+
+.buttons {
+    text-align: center;
+
+}
+
+o-button {
+    margin: 0 10px;
+}
+
+.auto {
+    
+    font-size: 20px;
+    font-family: 'Patua One', serif;
+    color: rgb(45, 13, 120);
+    width: 300px;
+    text-align: left;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.info{
+    font-size: medium;
+    font-weight: bold;
+    color: rgb(45, 13, 120);
+    margin-left: 20px;
+    
 }
