--- a/Front/src/app/main/towns/towns-home/towns-home.component.html
+++ b/Front/src/app/main/towns/towns-home/towns-home.component.html
@@ -12,15 +12,15 @@
         <div class="filter-style" fxLayout="column">
           <div fxLayout="row wrap" fxLayout="32px" class="buttons-container">
               <!-- Combo para Provincias -->
-              <o-combo attr=province_name service="provinces" entity="province" keys="id_province"
+              <!-- <o-combo attr=province_name service="provinces" entity="province" keys="id_province"
                       columns="province_name;id_province" value-column="province_name" visible-columns="province_name"
                       read-only="no" class="input-combo" fxFlex="35%" sort="ASC" searchable="true"
                       placeholder="province_name" label-visible="false">
-              </o-combo>
+              </o-combo> -->
               <!-- Combo para Ciudades -->
               <o-combo attr="id_town" label="TOWN" service="towns" entity="town" keys="id_town"
                             columns="town_name;id_town" visible-columns="town_name" value-column="town_name"
-                            class="input-combo" fxFlex="35%" sort="ASC" searchable="true"
+                            class="input-combo" fxFlex="80%" sort="ASC" searchable="true"
                             placeholder="town_name" label-visible="false">
               </o-combo>
               <!-- Botones del filtro -->
@@ -43,7 +43,7 @@
       <o-grid #grid columns="id_town;town_name;province_name"  service="towns" refresh-button="false"
               entity="town" keys="id_town" [cols]="6" show-page-size="false" page-size-options="4;8;16" 
               sortable-columns="town_name" sort-column="town_name" quick-filter="no" grid-item-height="2:4"
-              pagination-controls="true" gutter-size="15px" [ngStyle]="{'height':'600px'}">
+              pagination-controls="true" gutter-size="15px" fixed-header="yes"  [ngStyle]="{'height':'600px'}">
 
         <o-grid-item class="townCard" *ngFor="let list of grid.dataArray" class="townCard mat-elevation-z1">
           <div fxLayout="column" fxLayoutAlign="space-evenly center">
@@ -56,13 +56,13 @@
               <div class="town-name">{{ list.town_name }}</div>
               <div class="province-name">{{ list.province_name }}</div>
               <div class="host-amount">
-                <span class="material-icons">woman</span> {{ list.hostamount }}
+                <span class="material-symbols-outlined">person_pin_circle</span> {{ list.hostamount }}
               </div>
             </div>
           </div>
         </o-grid-item>
 
-  </o-grid>
+      </o-grid>
 
   </div>
   
