--- a/Front/src/app/main/community/community-detail/community-detail.component.css
+++ b/Front/src/app/main/community/community-detail/community-detail.component.css
@@ -3,6 +3,19 @@ o-grid {
   
 }
 
+.community-title {
+  text-align: center;
+  width: 100%;
+  padding: 10px 0;
+  background-color: #341777;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+  letter-spacing: 1px;
+  color: rgb(210, 190, 250);
+}
+
 /* Estilos para el filtro */
 .filter-style {
   margin-top: 20px;
@@ -65,4 +78,19 @@ o-grid {
 .province-name {
     font-size: 0.8em;
     text-align: center;
+  }
+
+  .material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24;
+    margin-bottom: 2px;
+  }
+
+  .host-amount {
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
   }
