--- a/Front/src/app/main/community/community-detail/community-detail.component.html
+++ b/Front/src/app/main/community/community-detail/community-detail.component.html
@@ -1,46 +1,19 @@
+
 <!-- <a [routerLink]="['../../communities']"> -->
 <button mat-flat-button [routerLink]="['../../communities']">
     <mat-icon>arrow_back_ios_new</mat-icon>
     {{'BACKBTN' | oTranslate}}
 </button>
 <!-- </a> -->
-<o-form #form fxFill service="communities" entity="community" keys="id_community" show-header="no">
+
+<o-form #form fxFill service="communities" entity="community" keys="id_community" show-header="no" (onDataLoaded)="onLoad()">
     <o-text-input attr="id_community" sql-type="INTEGER" enabled="no" oHidden></o-text-input>
-
-    <div class="filter-style" fxLayout="column">
-        <div fxLayout="row wrap" fxLayout="32px" class="buttons-container">
-            <!-- Combo para Provincias -->
-            <o-combo attr=province_name service="provinces" entity="province" keys="id_province"
-                    columns="province_name;id_province" value-column="province_name" visible-columns="province_name"
-                    read-only="no" class="input-combo" fxFlex="35%" searchable="true"
-                    placeholder="province_name" label-visible="false">
-            </o-combo>
-            <!-- Combo para Ciudades -->
-            <o-combo attr="id_town" label="TOWN" service="towns" entity="town" keys="id_town"
-                    columns="town_name;id_town" visible-columns="town_name" value-column="id_town"
-                    read-only="no" class="input-combo" fxFlex="35%" searchable="true"
-                    placeholder="town_name" label-visible="false">
-            </o-combo>
-
-            <!-- Botones del filtro -->
-            <div class="buttons-container">
-              <o-button attr="filter-button" icon="search" type="STROKED" class="input-search" [oFilterBuilderQuery]="filterBuilder"
-                        fxFlex="5%" color="primary">
-              </o-button>
-              <o-button attr="clear-button" icon="autorenew" type="STROKED" class="input-clear" [oFilterBuilderClear]="filterBuilder"
-                        xFlex="5%" color="primary">
-              </o-button>
-            </div>
-        </div>
-      </div>
-      <!-- oFilterBuilder para el filtrado -->
-      <o-filter-builder #filterBuilder attr="thefilter" filters="community_name;province_name;host_available"
-                        [target]="grid" query-on-change="no" [expression-builder]="createFilter">
-      </o-filter-builder>
-    
+    <o-text-input #communitynamefield attr="community_name" enabled="no" (onValueChange)="reloadValues($event)"
+        oHidden></o-text-input>
+    <h1 class="community-title">{{ custom_name }}</h1>
 
     <o-grid #grid columns="id_town;id_community;town_name;province_name" quick-filter-columns="town_name;province_name"
-        service="towns" entity="town" keys="id_town" parent-keys="id_community" [cols]="6" grid-item-height="3:4"
+        service="towns" entity="town" keys="id_town" parent-keys="id_community" [cols]="6" grid-item-height="2:3"
         show-page-size="false" page-size-options="4;8;16" refresh-button="false" pagination-controls="true"
         gutter-size="20px" [ngStyle]="{'height':'600px'}" quick-filter="no">
 
@@ -52,7 +25,9 @@
                     </a>
                     <div class="town-name">{{ list.town_name }}</div>
                     <div class="province-name">{{ list.province_name }}</div>
-                    <p class="province-name">Anfitrionas: {{ list.hostamount }}</p>
+                    <div class="host-amount">
+                        <span class="material-symbols-outlined">person_pin_circle</span> {{ list.hostamount }}
+                    </div>
                 </o-column>
             </o-grid-item>
         </div>
