--- a/Front/src/app/main/community/community-home/community-home.component.css
+++ b/Front/src/app/main/community/community-home/community-home.component.css
@@ -51,45 +51,19 @@ o-grid {
 }
 
 /* Estilos del grid */
-.grid-container {
-    display: grid;
-    cursor: pointer;
-    border-radius: 20px;
-    width: 100%;
-    height: auto;
-    display: grid;
-    position: relative;
-    }
-
-.grid-container::after {
-    content:'';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgba(50,50,50,50);
-}
-
-
-.communityCard {
-    border-radius: 20px;
-    width: 100%;
-    height: auto;
-    display: grid;
-    position: relative;
-}
-
-.community-image::after {
-    content: "";
+.grid-container::before { /* Velo sobre foto */
+    content: ""; /* Para que se muestre se muestre */
+    display: block;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: rgba(50, 50, 50, 50); /* Fondo negro semitransparente */
-    border-radius: 20px;
+    /* background-color: rgba(255, 255, 255, 100); Opacidad blanco */
+    background-color: rgba(50, 50, 50, 5); /* Opacidad negro todo el cuadro */
+    pointer-events: none;
 }
+
 
 .community-image {
     object-fit: cover; /* Ajuste de imagen */
