--- a/Front/src/app/main/community/community-home/community-home.component.html
+++ b/Front/src/app/main/community/community-home/community-home.component.html
@@ -1,4 +1,4 @@
-<o-form #form fxFill show-header="no">
+<o-form #form fxLayout="column" show-header="no">
 
   <h1 class="community-title">¿Dónde quieres ir?</h1>
 
@@ -19,18 +19,18 @@
                     xFlex="5%" color="primary">
           </o-button>
         </div>
+        <!-- oFilterBuilder para el filtrado -->
+        <o-filter-builder #filterBuilder attr="thefilter" filters="community_name;province_name;host_available"
+                          [target]="grid" query-on-change="no" [expression-builder]="createFilter">
+        </o-filter-builder>
+
     </div>
   </div>
-  <!-- oFilterBuilder para el filtrado -->
-  <o-filter-builder #filterBuilder attr="thefilter" filters="community_name;province_name;host_available"
-                    [target]="grid" query-on-change="no" [expression-builder]="createFilter">
-  </o-filter-builder>
-
   
     <o-grid #grid columns="id_community;community_name;province_name" service="communities" entity="community"
-      keys="id_community" [cols]="5" quick-filter="no" show-page-size="false" page-size-options="4;8;16"
-      grid-item-height="1:1" refresh-button="false" pagination-controls="true" gutter-size="10px"
-      sortable-columns="community_name" sort-column="community_name"[ngStyle]="{'height':'800px'}" hide-toolbar="true" >
+      keys="id_community" [cols]="5" quick-filter="no" show-page-size="false" show-footer="false"
+      grid-item-height="2:2" refresh-button="false" pagination-controls="false" sortable-columns="community_name"
+      sort-column="community_name" gutter-size="10px"[ngStyle]="{'height':'600px'}" show-buttons-text="no">
       
       <div class="grid-container">
         <o-grid-item *ngFor="let list of grid.dataArray">
