--- a/Front/src/app/main/towns/towns-home/towns-home.component.css
+++ b/Front/src/app/main/towns/towns-home/towns-home.component.css
@@ -1,16 +1,25 @@
-o-grid {
-    margin-top: 30px;
-    height: auto;
-    overflow: hidden;
+/* Título de la página */
+.towns-home {
+  margin-top: 20px;
+  width: 100%;
+  padding-left: 10px;
+  display: flex;
+  font-weight: bold;
+  font-size: 30px;
+  letter-spacing: 1px;
+  color: #341777;
+  margin-bottom: 7px;
 }
 
 /* Estilos para el filtro */
 .filter-style {
+margin-top: 10px;
 background-color: #f4f4f4; 
 border: 1px solid #ccc; 
-border-radius: 10px;
+border-radius: 20px;
 padding-right: 30px;
 padding-left: 30px;
+margin-bottom: 0;
 }
 
 .buttons-container {
@@ -29,57 +38,59 @@ border: none;
 cursor: pointer; 
 }
 
+/* Estilos para el grid */
+o-grid {
+  row-gap: 10px;
 
-.o-grid-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
 }
 
-  .o-grid-item {
-    border-radius: 10px;
-    cursor: pointer;
-    margin: 10px;
-    transition: transform 0.3s ease-in-out;
-  }
-  
-  .townCard:hover {
-    transform: scale(1.05);
-  }
-  
-  .image-container {
-    width: 100%;
-    height: 220px;
-    overflow: hidden;
-  }
-  
-  .town-image {
-    width: 100%;
-    height: 100%;
+
+.container-item {
+  margin-top: 0;
+  display: block;
+  position: absolute;
+  width: 90%;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  overflow: hidden;
+}
+
+.town-image {
+    width: 100%; 
+    max-height: 220px; 
     object-fit: cover;
   }
   
-  .town-details {
-    text-align: center;
-    padding: 10px;
-  }
-  
-  .town-name {
+.town-name {
     font-weight: bold;
-    font-size: 1em;
-    overflow: hidden;
-    padding: 4px 0;
-    text-overflow: ellipsis;
-    /* Permitir que el texto ocupe hasta dos líneas */
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    max-height: 2.6em;
-  }
-  
-  .province-name {
-    font-size: 0.8em;
+    font-size: 1.1em;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    padding: 4px 0;
+    text-align: center
+  }
+  
+.province-name {
+    font-size: 0.8em;
+    text-align: center;
+    margin-bottom: 6px;
+  }
+
+  .material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24;
+    margin-bottom: 6px;
+  }
+
+  .host-amount {
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    margin-bottom: 5px;
   }
