--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -114,7 +114,7 @@
             <div class="container">
                 <o-grid #gridReservationReceived attr="reservationReceived" service="users" entity="reservationReceived"
                     columns="id_reservation;name_traveler;surname_traveler;name_host;surname_host;message;status_name;reservation_date"
-                    query-rows="8" refresh-button="no" quick-filter="true"
+                    query-rows="8" refresh-button="no" quick-filter="true"  quick-filter-columns="name_traveler;surname_traveler;message;status_name"
                     visible-columns="name_host;message;status_name;reservation_date" [cols]="1" grid-item-height="70px"
                     gutter-size="1px" show-footer="no">
                 
@@ -128,18 +128,21 @@
                         </o-column>
 
                         <o-column layout-padding fxFlex="20" class="date">
-                            <div class="tour"><span>Fecha de la visita</span></div>
+                            <div class="tour"><span> {{'Reservation Date' | oTranslate}}</span></div>
                             <div class="dateT"><span>{{ list.reservation_date | date: 'dd/MM/yyyy' }} </span></div>
                         </o-column>
 
                         <o-column layout-padding fxFlex="15" class="status">
-                            <div class="statusS">Reserva</div>
-                            <div class="statusT">{{ list.status_name }}</div>
+                            <div class="statusS">{{'Reservation' | oTranslate}}</div>
+                            <div class="statusT" *ngIf="list.status_name==='rechazada'">{{ 'REJECTED' | oTranslate }}</div>
+                            <div class="statusT" *ngIf="list.status_name==='pendiente'">{{ 'PENDING' | oTranslate}}</div>
+                            <div class="statusT" *ngIf="list.status_name==='aceptada'">{{ 'ACCEPTED' | oTranslate }}</div>
+
                         </o-column>
                         <o-column layout-padding fxFlex="15" class="buttonVer"
                             (click)="verReservaRec(list.id_reservation)">
-                            <div class="iconE">Ver mensaje</div>
-                            <div class="iconA">Ver mensaje</div>
+                            <div class="iconE">{{'Read Message' | oTranslate}}</div>
+                            <div class="iconA">{{'Read Message' | oTranslate}}</div>
                         </o-column>
                     </o-grid-item>
                 </o-grid>
@@ -153,7 +156,7 @@
             <div class="container">
                 <o-grid #gridReservationSent attr="reservationSent" service="users" entity="reservationSent"
                     columns="id_reservation;name_traveler;surname_traveler;name_host;surname_host;message;status_name;reservation_date"
-                    query-rows="8" refresh-button="no" quick-filter="true"
+                    query-rows="8" refresh-button="no" quick-filter="true" quick-filter-columns="name_host;surname_host;message;status_name"
                     visible-columns="name_host;message;status_name;reservation_date" [cols]="1" grid-item-height="70px"
                     gutter-size="1px" show-footer="no">
                     <o-grid-item *ngFor="let list of gridReservationSent.dataArray">
@@ -166,18 +169,20 @@
                         </o-column>
 
                         <o-column layout-padding fxFlex="20" class="date">
-                            <div class="tour"><span>Fecha de la visita</span></div>
+                            <div class="tour"><span> {{'Reservation Date' | oTranslate}}</span></div>
                             <div class="dateT"><span>{{ list.reservation_date | date: 'dd/MM/yyyy' }} </span></div>
                         </o-column>
 
                         <o-column layout-padding fxFlex="15" class="status">
-                            <div class="statusS">Reserva</div>
-                            <div class="statusT">{{ list.status_name }}</div>
+                            <div class="statusS">{{'Reservation' | oTranslate}}</div>
+                            <div class="statusT" *ngIf="list.status_name==='rechazada'">{{ 'REJECTED' | oTranslate }}</div>
+                            <div class="statusT" *ngIf="list.status_name==='pendiente'">{{ 'PENDING' | oTranslate}}</div>
+                            <div class="statusT" *ngIf="list.status_name==='aceptada'">{{ 'ACCEPTED' | oTranslate }}</div>
                         </o-column>
                         <o-column layout-padding fxFlex="15" class="buttonVer"
                             (click)="verReservaSent(list.id_reservation)">
-                            <div class="iconE">Ver mensaje</div>
-                            <div class="iconA">Ver mensaje</div>
+                            <div class="iconE">{{'Read Message' | oTranslate}}</div>
+                            <div class="iconA">{{'Read Message' | oTranslate}}</div>
                         </o-column>
                     </o-grid-item>
                 </o-grid>
