--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-detail/travelers-reservation-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-detail/travelers-reservation-detail.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <o-form #form service="users" entity="reservation" keys="id_reservation" editable-detail="true" show-header="no"
         show-header-navigation="no" layout-direction="column" (onDataLoaded)="ngOnInit()">
-        <div class="date1">Fecha reserva</div>
+        <div class="date1">{{'Reservation Date' | oTranslate}}</div>
         <div class="date2">{{reservation_date | date: 'dd/MM/yyyy'}}</div>
         <div class="boxes">
             <div class="box1">
@@ -13,12 +13,10 @@
                 <div class="msgH">{{message_answer}}</div>
             </div>
             <div class="auto">
-                <p *ngIf="id_status == 1"> Tu reserva ha sido aceptada y este es el contacto de tu anfitriona!
+                <p *ngIf="id_status == 1"> {{'Reservation accepted' | oTranslate}}
 
-                <p *ngIf="id_status == 2"> {{name_host}} no ha podido aceptar tu reserva. Pero hay muchas más hosts y
-                    destinosen la web! </p>
-                <p *ngIf="id_status == 3">{{name_host}} aún no ha contestado a tu petición. Estás a tiempo de
-                    cancelarla. </p>
+                <p *ngIf="id_status == 2"> {{name_host}} {{'Reservation rejected text' | oTranslate}}  </p>
+                <p *ngIf="id_status == 3">{{name_host}} {{'Reservation delete' | oTranslate}} </p>
             </div>
             <div class="info">
                 <p *ngIf="id_status == 1">Tel: {{phonenumber_host}}</p>
