--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-received-detail/travelers-reservation-received-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-received-detail/travelers-reservation-received-detail.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <o-form #form service="users" entity="reservation" keys="id_reservation" editable-detail="true" show-header="no"
         show-header-navigation="no" layout-direction="column" (onDataLoaded)="ngOnInit()">
-        <div class="date1">Fecha reserva</div>
+        <div class="date1"> {{'Reservation Date' | oTranslate}}</div>
         <div class="date2">{{reservation_date | date: 'dd/MM/yyyy'}}</div>
         <div class="boxes">
             <div class="box1">
@@ -25,7 +25,7 @@
             <div class="auto">
                 <p *ngIf="id_status == 1">Has aceptado la reserva y {{name_traveler}} ya tiene tus datos de contacto!
                 </p>
-                <p *ngIf="id_status == 2">Has rechazado la reserva. Otra vez será!</p>
+                <p *ngIf="id_status == 2"> {{'You rejected the reservation' | oTranslate}}</p>
             </div>
         </div>
     </o-form>
